design: scrollbar fix

--- a/src/pages/DashboardPage/Dashboard.css
+++ b/src/pages/DashboardPage/Dashboard.css
@@ -7,6 +7,7 @@
   /* min-height: 100vh; */
   display: flex;
   gap: 12px;
+  padding-right: 0px;
 }
 
 .dashboard-left {
